--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+  <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
   <link rel="icon" href="data:image/ico;base64,aWNv">
-  <title>土味播放器</title>
+  <title>简单的音乐播放器</title>
   <style>
     .pointer {
       cursor: pointer;
@@ -21,11 +21,15 @@
 </head>
 
 <body>
+  <div id="chu_music"></div>
   <div>
     <div style="text-align: center;">
-      <input id="searchValue" value="周杰伦" type="text" oninput="change(this,'searchValue')">
-      <input id="currentPage" class="short-input" value="1" type="text" oninput="change(this,'currentPage')">
-      <input id="pageSize" class="short-input" value="10" type="text" oninput="change(this,'pageSize')">
+      <input id="searchValue" value="周杰伦" type="text" oninput="change(this,'searchValue')"
+        onkeydown="keyDown(event,this)">
+      <input id="currentPage" class="short-input" value="1" type="text" oninput="change(this,'currentPage')"
+        onkeydown="keyDown(event,this)">
+      <input id="pageSize" class="short-input" value="10" type="text" oninput="change(this,'pageSize')"
+        onkeydown="keyDown(event,this)">
       <span class="pointer" onclick="search_btn()">搜索</span>
     </div>
     <div id="operation" style="visibility: hidden;">
@@ -57,9 +61,14 @@
       randomGet()
     };
 
+    function keyDown(event, el) {
+      if (event.keyCode === 13) {
+        search_btn()
+      }
+    }
+
     function change(e, type) {
       window[type] = document.querySelector(`#${type}`).value
-      document.querySelector('#search_type').innerHTML = `总数量：${total}&nbsp;&nbsp;&nbsp;&nbsp;当前页数：${currentPage}&nbsp;&nbsp;&nbsp;&nbsp;每页条数：${pageSize}`
     }
 
     function search_btn() {
@@ -99,6 +108,7 @@
             if (res.code === '000000') {
               list = res.songResultData.result || []
               total = res.songResultData.totalCount
+              document.querySelector('#search_type').innerHTML = `总数量：${total}&nbsp;&nbsp;&nbsp;&nbsp;当前页数：${currentPage}&nbsp;&nbsp;&nbsp;&nbsp;每页条数：${pageSize}`
               createNode()
             } else {
               alert(res.info)
@@ -110,7 +120,7 @@
     }
 
     function createSingleNode(val) {
-      return `<div class="pointer" ><span>${val.singers[0].name}</span> - <span onclick="checkSong(this)" data-contentId="${val.contentId}">${val.name}</span></div>`
+      return `<div class="pointer" ><span>${val.singers && val.singers.length > 0 ? val.singers[0].name : ''}</span> - <span onclick="checkSong(this)" data-contentId="${val.contentId}">${val.name}</span></div>`
     }
     function createNode() {
       var node = '<div>'
