--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       position: relative;
     }
 
-    img {
+    #img-body img {
       width: 100%;
       height: 100%;
     }
@@ -53,12 +53,16 @@
       file.onload = (e) => {
         console.log(e)
         let img = document.createElement('img')
+        img.setAttribute('crossOrigin', 'anonymous');
         img.src = e.srcElement.result
         document.querySelector('#img-body').appendChild(img)
         setTimeout(() => {
           html2canvas(imgBody).then(function (canvas) {
-            console.log()
-            document.body.appendChild(canvas);
+            let imgs =  document.createElement('img')
+            imgs.src = canvas.toDataURL("image/png")
+            imgs.width = 100
+            imgs.height = 100
+            document.body.appendChild(imgs);
           });
         }, 1000)
 
