--- a/index.html
+++ b/index.html
@@ -5,70 +5,140 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script type="text/javascript" src="./html2canvas.min.js"></script>
-  <title>给我加个国旗吧~</title>
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+  <link rel="icon" href="data:image/ico;base64,aWNv">
+  <title>土味播放器</title>
   <style>
-    body {
-      background: #e4e4e4;
+    .pointer {
+      cursor: pointer;
     }
 
-    #img-body {
-      width: 100px;
-      height: 100px;
-      position: relative;
-    }
-
-    #img-body img {
-      width: 100%;
-      height: 100%;
-    }
-    #bg-img {
-      position: absolute;
-      left: 0;
-      top: 0;
-      bottom: 0;
-      right: 0;
+    .short-input {
+      width: 40px;
+      text-align: center;
     }
   </style>
 </head>
 
 <body>
-  <div id="img-body">
-    <img id="bg-img" src="./head-1.png" onclick="addMyImg()" alt="">
+  <div>
+    <div style="text-align: center;">
+      <input id="searchValue" value="周杰伦" type="text" oninput="change(this,'searchValue')"
+        onkeydown="keyDown(event,this)">
+      <input id="currentPage" class="short-input" value="1" type="text" oninput="change(this,'currentPage')"
+        onkeydown="keyDown(event,this)">
+      <input id="pageSize" class="short-input" value="10" type="text" oninput="change(this,'pageSize')"
+        onkeydown="keyDown(event,this)">
+      <span class="pointer" onclick="search_btn()">搜索</span>
+    </div>
+    <div id="operation" style="visibility: hidden;">
+      <span class="pointer" onclick="changePage('reduce')">上一页</span>
+      <span id="search_type"></span>
+      <span class="pointer" onclick="changePage('add')">下一页</span>
+    </div>
+
+    <div>
+      <div id="song-list">
+      </div>
+    </div>
+
+    <div>
+      <audio controls autoplay src="">
+        您的浏览器不支持 audio 标签。
+      </audio>
+    </div>
   </div>
-  <p>点击生成</p>
-  <p>将下方生成的图保存到手机即可~</p>
-  <p>速成版，后续更新中</p>
-  <input type="file" style="display: none" name="" id="file_input" onchange="fileChange()">
   <script>
-    let imgBody = document.querySelector('#img-body')
-    function addMyImg() {
-      document.querySelector('#file_input').click()
-      console.log(imgBody)
+    var list = []
+    var searchValue = '周杰伦'
+    var currentPage = 1
+    var pageSize = 10
+    var total = 9999
 
-    }
-    function fileChange() {
-      let file = new FileReader()
-      file.readAsDataURL(event.target.files[0])
-      file.onload = (e) => {
-        console.log(e)
-        let img = document.createElement('img')
-        img.setAttribute('crossOrigin', 'anonymous');
-        img.src = e.srcElement.result
-        document.querySelector('#img-body').appendChild(img)
-        setTimeout(() => {
-          html2canvas(imgBody).then(function (canvas) {
-            let imgs =  document.createElement('img')
-            imgs.src = canvas.toDataURL("image/png")
-            imgs.width = 100
-            imgs.height = 100
-            document.body.appendChild(imgs);
-          });
-        }, 1000)
+    var audio = document.querySelector('audio');
+    audio.onended = function () {
+      randomGet()
+    };
 
+    function keyDown(event, el) {
+      if (event.keyCode === 13) {
+        search_btn()
       }
     }
 
+    function change(e, type) {
+      window[type] = document.querySelector(`#${type}`).value
+    }
+
+    function search_btn() {
+      if (pageSize * (currentPage - 1) > total) {
+        alert('？？？？体育老师教的？不会算有几页吗？')
+      } else {
+        xhrFuc()
+      }
+    }
+
+    function changePage(type) {
+      if (type == 'reduce') {
+        if (currentPage == 1) {
+          return alert('还上一页个锤子？')
+        }
+        currentPage--
+      } else if (type == 'add') {
+        currentPage++
+      }
+      search_btn()
+    }
+
+    function randomGet() {
+      var random = Math.random()
+      var length = list.length
+      random = Math.floor(random * length)
+      sing(list[random].contentId)
+    }
+
+    function xhrFuc() {
+      var xhr = new XMLHttpRequest();
+      xhr.open("get", `http://pd.musicapp.migu.cn/MIGUM2.0/v1.0/content/search_all.do?&ua=Android_migu&version=5.0.1&text=${encodeURI(searchValue)}&pageNo=${currentPage}&pageSize=${pageSize}&searchSwitch={"song":1,"album":0,"singer":0,"tagSong":0,"mvSong":0,"songlist":0,"bestShow":1}`, true);
+      xhr.onreadystatechange = function () {
+        if (xhr.readyState == 4) {
+          if (xhr.status == 200) {
+            let res = JSON.parse(xhr.responseText)
+            if (res.code === '000000') {
+              list = res.songResultData.result || []
+              total = res.songResultData.totalCount
+              document.querySelector('#search_type').innerHTML = `总数量：${total}&nbsp;&nbsp;&nbsp;&nbsp;当前页数：${currentPage}&nbsp;&nbsp;&nbsp;&nbsp;每页条数：${pageSize}`
+              createNode()
+            } else {
+              alert(res.info)
+            }
+          }
+        }
+      }
+      xhr.send();
+    }
+
+    function createSingleNode(val) {
+      return `<div class="pointer" ><span>${val.singers && val.singers.length > 0 ? val.singers[0].name : ''}</span> - <span onclick="checkSong(this)" data-contentId="${val.contentId}">${val.name}</span></div>`
+    }
+    function createNode() {
+      var node = '<div>'
+      list.map(i => {
+        node += createSingleNode(i)
+      })
+      node += '</div>'
+      document.querySelector('#song-list').innerHTML = node
+      document.querySelector('#operation').style.visibility = 'visible'
+    }
+    function checkSong($event) {
+      sing($event.dataset.contentid)
+    }
+    function sing(contentId) {
+      // 无损 formatType = SQ resourceType = E
+      // 高品 formatType = HQ resourceType = 2
+      let uri = `http://app.pd.nf.migu.cn/MIGUM2.0/v1.0/content/sub/listenSong.do?toneFlag=HQ&netType=00&userId=15548614588710179085069&ua=Android_migu&version=5.1&copyrightId=0&contentId=${contentId}&resourceType=2&channel=1`
+      audio.src = uri
+    }
   </script>
 </body>
 
